--- a/www/views/home/home.html
+++ b/www/views/home/home.html
@@ -2,6 +2,11 @@
   <ion-content>
     <div class="row">
       <div class="col">
+          <div class="card">
+              <div class="item item-text-wrap" ui-sref="Tard">
+                  klick her
+              </div>
+          </div>
         <p>x: {{ X }}</p>
         <p>y: {{ Y }}</p>
         <p>z: {{ Z }}</p>
